2.0.11
	+ Duplicity archive dir can be set in configuration file
	+ backup-tool always create meta and data directories when backing
	  up to cloud
	+ remoteUrlParams method does not require user or password parameter
	  when the backup method is 'file'
	+ Report methods in RemoteSettings and BackupDomains now return
	  non-i18n'ed data
	+ Parse and store backup statistics for further processing
	+ First date is selected by default on restore-tool
	+ Set default value for the keep previous full copies setting
	+ Added 'files included' domain and restore all fields options to
	  restore-tool
	+ Using 'cat' command instead of 'tail' to retrieve backup metadata
	+ Clean temporal directory before doing logs restore
	+ Bugfix: values from configuration file are checked to assure
	  that at least making backup is tried once
	+ More control over uncommon errors
2.0.10
	+ Add migration script to delete old backup configuration from
	  ebox crontab
	+ Use a geometric progression for timeout values for retrying
	  connecting to backup servers when there are connectivity problems
	+ Fixed event message when something goes wrong at first stages
	+ Fixed bug in checking right method changing
	+ Added a way to delete orphan metadata files
2.0.9
	+ Change one of our backup servers fingerprint
	+ Using the new module name for cloud-prof package
	+ Store metadata in Disaster Recovery backups
	+ Autodetect encryption type instead of asking
	+ Ask for domains to restore right after choosing the date
	+ Avoid some warnings in restore-tool when executed in a shell
2.0.8
	+ Added missing crontab string for monthly full backup
	+ Fixed wrong crontab string for weekly full backup
	+ Use software module and ProgressIndicator to install packages
	+ Fixed problems with pulsating progress bar in restore-tool
	+ Use fork + exec to launch zenity, fixes argument parsing problems
	+ Making environment local for installing modules in restore-tool
	+ Added cleanup operation on failure