@@ -1,0 +1,9 @@
+## Process this file with automake to produce Makefile.in
+SUBDIRS = RemoteServices
+
+
+DISTCLEANFILES =
+
+EXTRA_DIST = 
+
+MAINTAINERCLEANFILES = Makefile.in
