@@ -39,6 +39,7 @@ use EBox::DBEngineFactory;
 use EBox::Exceptions::External;
 use EBox::Exceptions::Internal;
 use EBox::Exceptions::MissingArgument;
+use EBox::Exceptions::RemoteServices::NotConnected;
 use EBox::Gettext;
 use EBox::Global;
 use EBox::Service;
@@ -891,6 +892,8 @@ sub disasterRecoveryAddOn
             my $disasterRec = $cap->disasterRecoveryAddOn();
             $self->st_set_bool('subscription/disasterRecovery', $disasterRec);
             return $disasterRec;
+        } else {
+            throw EBox::Exceptions::RemoteServices::NotConnected();
         }
     }
     return '';
