@@ -1,5 +1,7 @@
 HEAD
 	+ Avoid log entry with unexistant file
+	+ Using unconfigured interfaces as last resort to connect to Cloud
+	+ Added exception for no connection to Cloud
 2.0.11
 	+ Bugfix: Migration for VPN clients to new local port and address
 	  options works
